# ferridian

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/benches/: mesher.rs
crates/core/src/: lib.rs
crates/jni-bridge/: Cargo.toml
crates/jni-bridge/src/: lib.rs
crates/minecraft/: Cargo.toml
crates/minecraft/src/: lib.rs
crates/shader/: Cargo.toml
crates/shader-gpu/: Cargo.toml
crates/shader-gpu/src/: lib.rs
crates/shader/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: BACKEND_CAPABILITIES.md  CROSS_PLATFORM.md  GLSL_APERTURE_MIGRATION.md  IRIS_APERTURE_COMPAT.md  PLAN.md  README.md  RESEARCH.md  RESEARCH_NOTES.md  WGPU_COMPATIBILITY.md  plan.md
examples/standalone/: Cargo.toml  README.md
examples/standalone/src/: main.rs
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/io/ferridian/bridge/: ChunkSectionBuffers.java  FerridianBootstrap.java  NativeBridge.java  RendererBridge.java
java/src/main/java/io/ferridian/fabric/: FabricLifecycleHooks.java  FabricRendererHooks.java  FerridianModInitializer.java
java/src/test/java/io/ferridian/bridge/: ChunkSectionBuffersTest.java  FerridianBootstrapTest.java  NativeBridgeTest.java  RendererBridgeTest.java
java/src/test/java/io/ferridian/fabric/: FabricLifecycleHooksTest.java  FabricRendererHooksTest.java  FerridianModInitializerTest.java
shaders/: README.md
shaders/wgsl/: chunk_lod.wgsl  deferred_lighting.wgsl  gbuffer_fill.wgsl  hiz_downscale.wgsl  shadow_depth.wgsl  standalone.wgsl  translucent.wgsl  visibility_cull.wgsl
