[workspace]
members = [
    "crates/core",
    "crates/jni-bridge",
    "crates/minecraft",
    "crates/shader",
    "crates/utils",
    "crates/xtask",
    "examples/standalone",
]
resolver = "2"

[workspace.package]
authors = ["Ferridian contributors"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.97"
bytemuck = { version = "1.25.0", features = ["derive"] }
camino = "1.1.9"
clap = { version = "4.5.32", features = ["derive"] }
glam = "0.30.0"
jni = "0.22.0"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
wgpu = { version = "27.0.1", features = ["glsl", "wgsl"] }
winit = "0.30.12"

[profile.dev]
debug = 1

[profile.release]
codegen-units = 1
lto = "thin"
