[package]
name = "ferridian-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
ferridian-shader = { path = "../shader" }
ferridian-utils = { path = "../utils" }
glam.workspace = true
log.workspace = true
profiling.workspace = true
rayon.workspace = true
wgpu.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "mesher"
harness = false
