[package]
name = "xtask"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
spirvbuilder = { package = "spirv-builder", version = "0.9", default-features = false, features = ["use-installed-tools"], optional = true }

[features]
default = []
shaders = ["spirvbuilder"]
